--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     implementation 'com.hivemq:hivemq-mqtt-client:1.3.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
